kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mech-client-deployment
spec:
  selector:
    matchLabels:
      app: mech-client
  template:
    metadata:
      labels:
        app: mech-client
    spec:
      containers:
      - name: mech-client-container
        image: ohmv10/mech-client:v1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mech-client-service
spec:
  selector:
    app: mech-client
  ports:
  - port: 3000
    targetPort: 3000
