kubernetes/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mech-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mech-server
  template:
    metadata:
      labels:
        app: mech-server
    spec:
      containers:
      - name: mech-server
        image: ohmv10/mech-server:v1.1
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: mech-server-service
spec:
  selector:
    app: mech-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
