kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mech-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mech-server-service
            port:
              number: 8000
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mech-client-service
            port:
              number: 3000
